--- a/app/src/main/res/layout/item_payment.xml
+++ b/app/src/main/res/layout/item_payment.xml
@@ -8,6 +8,7 @@
     app:cardCornerRadius="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
