--- a/app/src/main/res/navigation/nav_buy_tickets.xml
+++ b/app/src/main/res/navigation/nav_buy_tickets.xml
@@ -132,6 +132,16 @@
             android:id="@+id/action_bookingFragment_to_tripDetailsDialog"
             app:destination="@id/tripDetailsDialog" />
 
+        <action
+            android:id="@+id/action_bookingFragment_to_navigation_search"
+            app:destination="@id/navigation_search"
+            app:popUpTo="@id/nav_buy_tickets"
+            app:popUpToInclusive="true"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left" />
+
     </fragment>
 
     <fragment
@@ -166,6 +176,16 @@
         <argument
             android:name="journeyData"
             app:argType="kz.busjol.domain.model.JourneyData"/>
+
+        <action
+            android:id="@+id/action_paymentOrderResultFragment_to_navigation_search"
+            app:destination="@id/navigation_search"
+            app:popUpTo="@id/nav_buy_tickets"
+            app:popUpToInclusive="true"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left" />
 
     </fragment>
 
