--- a/app/src/main/res/layout/item_payment_order_qr.xml
+++ b/app/src/main/res/layout/item_payment_order_qr.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/qr"
         android:layout_width="@dimen/_130sdp"
         android:layout_height="@dimen/_130sdp"
-        android:layout_gravity="center"
-        android:src="@drawable/qr_example"/>
+        android:layout_gravity="center" />
 
 </FrameLayout>
