--- a/app/src/main/res/layout/dialog_city_selector.xml
+++ b/app/src/main/res/layout/dialog_city_selector.xml
@@ -38,6 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:maxLines="1"
+            android:inputType="text"
+            android:ellipsize="end"
             android:shadowColor="@color/green_background"/>
 
     </com.google.android.material.textfield.TextInputLayout>
