--- a/app/src/main/res/layout/fragment_payment_order_result.xml
+++ b/app/src/main/res/layout/fragment_payment_order_result.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/gray_background">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
